# custom_flow_test

./: .gitignore  config.yaml  config_chip.yaml  config_chipcore.yaml  config_wrapper.yaml  flake.nix  flow.py  macro_placement.cfg  macro_placement_wrapper.cfg  pyhflow.py  pyproject.toml  requirements.txt  run-all.sh  run-flow.sh  run-sim.sh  run-wrapper.sh  run.sh  view.sh
designs/: dadda-mult.yml  proj2-xcel.yml
steps/01-pymtl-sim/: run.sh.j2
steps/02-sv2v/: run.sh.j2
steps/03-librelane-core/: config.yaml.j2  run.sh.j2
steps/04-librelane-chip/: config.yaml.j2  run.sh.j2
steps/05-librelane-wrapper/: config.yaml.j2  run.sh.j2
verilog/rtl/: chip_top.v
