[project]
name = "ve-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "attrs==26.1.0",
    "cffi==2.0.0",
    "greenlet==3.5.0",
    "hypothesis==6.152.4",
    "iniconfig==2.3.0",
    "numpy==2.4.4",
    "packaging==26.2",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "py==1.11.0",
    "pycparser==3.0",
    "pygments==2.20.0",
    "pymtl3==3.1.16",
    "pytest==6.2.5",
    "sortedcontainers==2.4.0",
    "toml==0.10.2",
]
